# api-calculator

./: README.md  pyproject.toml
app/: main.py
app/api/api_v1/: api.py  simple.py
app/dependencies/: deps.py
app/models/: model.py  operators.py  schema.py
app/settings/: app.py  config.py  constants.py
app/static/: index.html
docker/: Dockerfile
scripts/: test.sh
tests/: conftest.py  test_simple.py
