[tool.poetry]
name = "app"
version = "0.1.0"
description = "Simple calculator"
authors = ["maxim_dziuba <maxim.dziuba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
uvicorn = "^0.29.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
